--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@ Name: <input type="text" name="name"><br>
 E-mail: <input type="text" name="email"><br>
 <input type="submit">
 </form>
-<?php
-print_r($_SERVER);
-print_r($_POST);
-print_r($_GET);
-print_r($_FILES);
-?>
+<script>
+alert(document.url);
+</script>
 </body>
 </html>
